# AppReveal

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Package.swift  README.md  index.html
.codex/environments/: environment.toml
.github/workflows/: lint.yml
Android/: .editorconfig  build.gradle.kts  settings.gradle.kts
Android/appreveal/: build.gradle.kts
Android/appreveal-noop/: build.gradle.kts
CLI/: README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
CLI/src/: discovery.ts  help.ts  index.ts  mcp.ts  output.ts  workflows.ts
CLI/test/: mcp.test.ts
Flutter/: README.md
Flutter/appreveal/: analysis_options.yaml  pubspec.yaml
Flutter/appreveal/lib/: appreveal.dart
Flutter/appreveal/test/: element_discovery_test.dart  mcp_router_test.dart  screenshot_capture_test.dart
Flutter/example/: README.md  pubspec.yaml
Flutter/example/lib/: app.dart  main.dart
ReactNative/: README.md
ReactNative/appreveal/: README.md  appreveal.podspec  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
ReactNative/appreveal/android/: build.gradle
ReactNative/appreveal/ios/: AnyCodable.swift  AppRevealModule.h  AppRevealModule.mm  AppRevealRNBridge.swift  (+17 more)
ReactNative/example/: app.json  metro.config.js  package.json  tsconfig.json
Windows/AppReveal.Windows/: AppReveal.Windows.csproj  AppReveal.cs  BuiltInTools.cs  CurrentProcessWindowProvider.cs  Json.cs  Mcp.cs  Providers.cs  README.md
Windows/appreveal-tauri/: Cargo.toml  PARITY.md  README.md
Windows/appreveal-tauri/examples/: serve.rs
Windows/appreveal-tauri/src/: builtins.rs  error.rs  lib.rs  protocol.rs  providers.rs  registry.rs  server.rs  tauri_integration.rs
docs/: android.md  architecture.md  brief.md  ios.md  macos.md  tools.md  windows.md  wkwebview-support.md
example/Android/: README.md  settings.gradle.kts  verify-compose-mcp.sh
example/iOS/: README.md
iOS/: .swiftlint.yml  Package.swift
script/: build_and_run.sh
scripts/: pre-push  setup-hooks.sh  verify-macos-lan-mcp.sh  verify-screenshot-mcp.sh
(+234 files in other folders)
