[package]
name = "appreveal-tauri"
version = "0.10.0"
edition = "2021"
authors = ["AppReveal Contributors"]
license = "MIT"
description = "AppReveal Streamable HTTP JSON-RPC foundation for Rust/Tauri Windows apps"
repository = "https://github.com/UnlikeOtherAI/AppReveal"
homepage = "https://github.com/UnlikeOtherAI/AppReveal"
documentation = "https://docs.rs/appreveal-tauri"
readme = "README.md"
keywords = ["appreveal", "mcp", "tauri", "debug", "windows"]
categories = ["development-tools::debugging"]
include = [
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
    "/PARITY.md",
    "/src/**",
]

[lib]
name = "appreveal_tauri"
path = "src/lib.rs"

[features]
default = []
tauri = ["dep:tauri"]

[dependencies]
getrandom = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", optional = true }
